<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/LinearLayout"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/back">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/Calculator"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="0dp"
            app:cardBackgroundColor="@color/CardColor2"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"

            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Calculator"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="0dp"
            app:cardBackgroundColor="@color/CardColor"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp"
            android:id="@+id/UnitConverter"
            >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UnitConverter"
                android:textColor="@color/textColor"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="normal"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="0dp"
            app:cardBackgroundColor="@color/CardColor2"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:id="@+id/NumberConversion"
            >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/NumberConversion"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="0dp"
            app:cardBackgroundColor="@color/CardColor"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:id="@+id/LogicalOperation"
            >
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LogicalOperation"
                android:textColor="@color/textColor"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="normal"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="0dp"
            app:cardBackgroundColor="@color/CardColor2"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:id="@+id/PermutationAndCombination"
            >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/PermutationAndCombination"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="normal"
                tools:ignore="TextContrastCheck" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>